# leetcodes

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README  main.cc
codes/: 1114.Print_in_Order.h  1114.Print_in_Order.hpp  1115.Print_FooBar_Alternatiely.h  118.Pascal's_Triangle.hpp  119.Pascal's_Triangle_Ⅱ.hpp  120.Triangle.h  120.Triangle.hpp  1292.Maximum_Side_Length_of_a_Square_with_Sum_Less_than_or_Equal_to_Threshold.hpp  1314.Matrix_Block_Sum.h  1332.Remove_Palindromic_Subsequences.hpp  1414.Find_the_Minimum_Number_of_Fibonacci_Numbers_Whose_Sum_Is_K.h  1455.Check_If_a_Word_Occurs_As_a_Prefix_of_Any_Word_in_a_Sentence.hpp  1460.Make_Two_Arrays_Equal_by_Reversing_Sub-arrays.h  1592.Rearrage_Spaces_Between_Words.h  1716.Calculate_Memory_in_Leetcode_Bank.h  1765.Map_of_Highest_Peak.hpp  1816.Truncate_Sentence.h  1996.The_Number_of_Weak_Characters_in_the_Game.h  2013.Detect_Squares.h  2022.Convert_1D_Array_Into_2D_Array.hpp  2028.Find_Missing_Observations.h  2034.Stock_Price_Fluctuation.h  2038.Remove_Colored_Pieces_if_Both_Neighbors_are_the_Same_Color.hpp  2044.Count_Number_of_Maximum_Bitwise-OR_Subsets.hpp  2045.Second_Minimum_Time_to_Reach_Destination.h  2047.Number_of_Valid_Words_in_a_Sentence.hpp  2100.Find_Good_Days_to_Rob_the_Bank.hpp  2104.Sum_of_Subarray_Ranges.h  233.Number_of_Digit_One.h  258.Add_Digits.hpp  300.Longest_Increasing_Subsequence.h  304.Range_Sum_Query_2D-Immutable.h  319.Bulb_Switcher.hpp  322.Coin_Change.h  376.Wiggle_Subsequence.h  377.Combination_Sum_IV.h  383.Ransom_Note.h  384.Shuffle_an_Array.h  391.Perfect_Rectangle.h  393.UTF-8_Validation.h  (+28 more)
codes/10.Regular_Expression_Matching/: solution.hpp
codes/1014.Best_Sightseeing_Pair/: main.cpp
codes/11.Container_With_Most_Water/: main.cpp  solution.hpp
codes/1143.Longest_Common_Subsequence/: solution.hpp
codes/12.Integer_to_Roman/: solution.hpp
codes/122.Best_Time_to_Buy_and_Sell_Stock_II/: main.cpp  solution.hpp
codes/128.Longest_Consecutive_Sequence/: main.cpp  solution.hpp
codes/13.LCOF/: main.cpp  solution.hpp
codes/13.Roman_to_Integer/: solution.hpp
codes/134.Gas_Station/: solution.hpp
codes/136.Single_Number/: solution.hpp
codes/139.Word_Break/: main.cpp  solution.hpp
codes/14.Longest_Common_Prefix/: main.cpp  solution.hpp
codes/141.Linked_List_Cycle/: solution.hpp
codes/142.Linked_List_Cycle_Ⅱ/: solution.hpp
codes/143.Reorder_List/: solution.hpp
codes/15.3Sum/: main.cpp  solution.hpp
codes/155.Min_Stack/: solution.hpp
example/: solution.hpp
tests/: 1115.print_foobar_alternatively_test.cc  1455.Check_If_a_Word_Occurs_As_a_Prefix_of_Any_Word_in_a_Sentence.cc  1460.Make_Two_Arrays_Equal_by_Reversing_Sub-arrays.cc  658.Find_K_Clostest_Elements.cc  946.Validate_Stack_Sequences.cc  CMakeLists.txt  print_foobar_alternatively_test.cc
(+144 files in other folders)
