link_libraries(gtest gtest_main)

add_executable(1115.print_foobar_alternatively_test 1115.print_foobar_alternatively_test.cc)
gtest_add_tests(TARGET
    1115.print_foobar_alternatively_test)

add_executable(1455.Check_If_a_Word_Occurs_As_a_Prefix_of_Any_Word_in_a_Sentence 1455.Check_If_a_Word_Occurs_As_a_Prefix_of_Any_Word_in_a_Sentence.cc)
gtest_add_tests(TARGET
    1455.Check_If_a_Word_Occurs_As_a_Prefix_of_Any_Word_in_a_Sentence)


